@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012, 2022 THALES GLOBAL SERVICES.
+ * Copyright (c) 2012, 2024 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -47,11 +47,29 @@ public interface ImageSelector {
      * @param selectionMode
      *            the selectionMode
      * @param currentSelection
+     *            the current image path.
+     * @param displayImagePaths
+     *            if true, the dialog will display the current and new selected image path and a message if the image is
+     *            not found.
+     * @return a non null list of the selected image paths
+     */
+    List<String> selectImages(EObject eObject, SelectionMode selectionMode, String currentSelection, boolean displayImagePaths);
+
+    /**
+     * Get the selected image paths.
+     * 
+     * @param eObject
+     *            the {@link EObject} used to associate the image with
+     * @param selectionMode
+     *            the selectionMode
+     * @param currentSelection
      *            the current image path. If not null, the dialog will display the current and new selected image path
      *            and a message if the image is not found.
      * @return a non null list of the selected image paths
      */
-    List<String> selectImages(EObject eObject, SelectionMode selectionMode, String currentSelection);
+    default List<String> selectImages(EObject eObject, SelectionMode selectionMode, String currentSelection) {
+        return selectImages(eObject, selectionMode, currentSelection, true);
+    }
 
     /**
      * Get the selected image paths.
@@ -62,6 +80,8 @@ public interface ImageSelector {
      *            the selectionMode
      * @return a non null list of the selected image paths
      */
-    List<String> selectImages(EObject eObject, SelectionMode selectionMode);
+    default List<String> selectImages(EObject eObject, SelectionMode selectionMode) {
+        return selectImages(eObject, selectionMode, null);
+    }
 
 }
